Thu Oct 15 12:01:11 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (resp_text_code): accepts response codes without
	  text.  backported from trunk.  [ruby-core:24194]

Tue Oct 13 18:54:25 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/variable.rb: bug fix. additional trace definition changes the
	  option of first trace definition.

Mon Oct 12 23:24:58 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (getaddress): rescue exceptions.  [ruby-dev:39451]

Sun Oct 11 15:54:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/gdbm/gdbm.c (fgdbm_select): fixed rdoc.  a patch from Justin
	  Collins in [ruby-core:26050].

Fri Oct  9 02:39:47 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* ext/curses/curses.c: Many functions of module Curses could cause a
	  crash if the ncurses library was not properly initialized.
	  Fix pointed out by Alexander Beisig [ruby-core:22592]
	  Functions fixed: attroff, attron, attrset, bkgd, bkgdset,
	  can_change_color, close_screen, closed, color_content, curs_set,
	  def_prog_mode, delch, deleteln, getmouse, getstr, has_colors,
	  init_color, init_pair, insertln, keyname, mouseinterval, mousemask,
	  pair_content, pair_number, reset_prog_mode, resizeterm, scrl,
	  setscrreg, standend, standout, start_color, timeout, ungetmouse

Fri Oct  9 00:34:20 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/net/telnet.rb (cmd): Pass FailEOF options: patch by Brian
	  Candler [ruby-core:22723]

Wed Oct  7 08:07:45 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (NUM2TIMET): defined because some platforms, such as
	  NetBSD5/amd64 and NetBSD6/i386, has time_t which size is different
	  from long.  (NetBSD 5 uses 32bit time_t for all, including 64bit,
	  platforms.  NetBSD 6 uses 64bit time_t for all, including 32bit,
	  platforms.)
	  (TIMET2NUM): defined.
	  (time_timeval): use NUM2TIMET.
	  (time_s_at): ditto.
	  (time_to_i): use TIMET2NUM.
